selfhosted/dawarich/namespace.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/core/namespace_v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: dawarich
  labels:
    gateway.inf-k8s.net/anurag-sh: "true"
