selfhosted/dawarich/photon-deployment.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dawarich-photon
  namespace: dawarich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: photon
  template:
    metadata:
      labels:
        app: photon
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-optiplex-4
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: photon
          image: rtuszik/photon-docker:2.3.0@sha256:827cedf9fa3337e657611d62ada669def75dff61c56b51ae55056155d1a9b236
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 2322
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              memory: 4Gi
          startupProbe:
            httpGet:
              path: /status
              port: http
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 1440
          readinessProbe:
            httpGet:
              path: /status
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /status
              port: http
            periodSeconds: 60
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: photon-data
              mountPath: /photon/data
      volumes:
        - name: photon-data
          persistentVolumeClaim:
            claimName: dawarich-photon-data
