selfhosted/dawarich/photon-service.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: photon
  namespace: dawarich
  labels:
    app: photon
spec:
  selector:
    app: photon
  ports:
    - name: http
      protocol: TCP
      port: 2322
      targetPort: http
