selfhosted/dawarich/service.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: dawarich
  namespace: dawarich
  labels:
    app: dawarich
spec:
  selector:
    app: dawarich
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
